--- a/FrontEndtesting/index.html
+++ b/FrontEndtesting/index.html
@@ -113,22 +113,17 @@
         <div class="cable_editor_container">
             <div class="title">Custom Cable Editor</div>
             <button type="button" class="center_btn">Show quick preset cable configurations</button>
-            <div class="pre-configs_container"></div>
-            <div class="interactive_cable_editor_container">
-                <div class="cable_full">
-                    <div class="input_output">
-                        <span class="connector_bubble connector_bubble_active" id="output_A_bubble"></span>
-                        <span class="connector_bubble" id="output_B_bubble"></span>
-                        <div class="add_bubble"></div>
-                    </div>
-                    <div class="center">
-    
-                    </div>
-                    <div class="input_output">
-                        <span class="connector_bubble" id="input_A_bubble"></span>
-                        <span class="connector_bubble" id="input_B_bubble"></span>
-                        <div class="add_bubble"></div>
-                    </div>
+            <div class="cable_full">
+                <div class="input_output connectors_output_segment">
+                    <span class="connector_bubble connector_bubble_active" id="output_A_bubble"></span>
+                    <span class="connector_bubble" id="output_B_bubble"></span>
+                </div>
+                <div class="center">
+
+                </div>
+                <div class="input_output connectors_input_segment">
+                    <span class="connector_bubble" id="input_A_bubble"></span>
+                    <span class="connector_bubble" id="input_B_bubble"></span>
                 </div>
             </div>
         </div>
