--- a/FrontEndtesting/index.html
+++ b/FrontEndtesting/index.html
@@ -24,7 +24,7 @@
                         <span class="connector_selector_radio">Output A</span>
                     </label>
                     
-                    <label class="connector_selector_radio_container hidden">
+                    <label class="connector_selector_radio_container hidden" data-selector-container="output_b">
                         <input type="radio" name="connector_selector_radio_group" data-selector="output_b"></input>
                         <span class="connector_selector_radio">Output B</span>
                     </label>
@@ -34,8 +34,8 @@
                         <span class="connector_selector_radio">Input A</span>
                     </label>
 
-                    <label class="connector_selector_radio_container hidden">
-                        <input type="radio" name="connector_selector_radio_group" data-selector="input_a"></input>
+                    <label class="connector_selector_radio_container hidden" data-selector-container="input_b">
+                        <input type="radio" name="connector_selector_radio_group" data-selector="input_b"></input>
                         <span class="connector_selector_radio">Input B</span>
                     </label>
                 </div>
@@ -125,17 +125,17 @@
                     <span class="connector_bubble" data-bubble="input_a"></span>
                     <span class="connector_bubble hidden" data-bubble="input_b"></span>
                 </div>
-                <div class="connector_count_container remove_output">
-                    <div class="connector_count_button remove_btn" data-remove_connector="output_b">Remove<br>Connector</div>
+                <div class="connector_count_container count_output">
+                    <div class="connector_count_button" data-count_connector="output_b">
+                        <div data-connector_count-text="output_b">Add</div>
+                        <div>Connector</div>
+                    </div>
                 </div>
-                <div class="connector_count_container add_output">
-                    <div class="connector_count_button add_btn" data-add_connector="output_b">Add<br>Connector</div>
-                </div>
-                <div class="connector_count_container remove_input">
-                    <div class="connector_count_button remove_btn" data-remove_connector="input_b">Remove<br>Connector</div>
-                </div>
-                <div class="connector_count_container add_input">
-                    <div class="connector_count_button add_btn" data-add_connector="input_b">Add<br>Connector</div>
+                <div class="connector_count_container count_input">
+                    <div class="connector_count_button" data-count_connector="input_b">
+                        <div data-connector_count-text="input_b">Add</div>
+                        <div>Connector</div>
+                    </div>
                 </div>
             </div>
         </div>
