--- a/FrontEndtesting/index.html
+++ b/FrontEndtesting/index.html
@@ -43,7 +43,7 @@
             <div class="connetor_results_container">
                 <div class="connector_cell_container">
                     <div class="connector_cell_type_1">
-                        <img draggable="false" src="img/TRS-6.35mm-3_Pole-male-side_view.svg" alt="">
+                        <img draggable="false" src="img/TRS-6.35mm-3_Pole-male-side_view.svg" alt="" data-cell-image="cid_1">
                         <div class="cell_text_type_1">
                             <p>Category: Audio</p>
                             <p>Name: TRS</p>
@@ -53,13 +53,13 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button">Insert</button>
-                        <button type="button">Pinout details</button>
+                        <button type="button" data-cell-insert="cid_1">Insert</button>
+                        <button type="button">More details</button>
                     </div>
                 </div>
                 <div class="connector_cell_container">
                     <div class="connector_cell_type_1">
-                        <img draggable="false" src="img/TRS-2.5mm-3_pole-male-side_view.svg" alt="">
+                        <img draggable="false" src="img/TRS-2.5mm-3_pole-male-side_view.svg" alt="" data-cell-image="cid_2">
                         <div class="cell_text_type_1">
                             <p>Category: Audio</p>
                             <p>Name: TRS</p>
@@ -69,14 +69,13 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button">Add</button>
-                        <button type="button">Replace</button>
-                        <button type="button">Pinout</button>
+                        <button type="button" data-cell-insert="cid_2">Insert</button>
+                        <button type="button">More details</button>
                     </div>
                 </div>  
                 <div class="connector_cell_container">
                     <div class="connector_cell_type_1">
-                        <img draggable="false" src="img/TRRRS-4.4mm_4_pole-male_side_view.svg" alt="">
+                        <img draggable="false" src="img/TRRRS-4.4mm_4_pole-male_side_view.svg" alt="" data-cell-image="cid_3">
                         <div class="cell_text_type_1">
                             <p>Category: Audio</p>
                             <p>Name: TRRRS</p>
@@ -86,14 +85,13 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button">Add</button>
-                        <button type="button">Replace</button>
-                        <button type="button">Pinout</button>
+                        <button type="button" data-cell-insert="cid_3">Insert</button>
+                        <button type="button">More details</button>
                     </div>
                 </div>
                 <div class="connector_cell_container">
                     <div class="connector_cell_type_1">
-                        <img draggable="false" src="img/XLR-standard-4_pin-female-side_view.svg" alt="">
+                        <img draggable="false" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-cell-image="cid_4">
                         <div class="cell_text_type_1">
                             <p>Category: Audio</p>
                             <p>Name: XLR</p>
@@ -103,9 +101,8 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button">Add</button>
-                        <button type="button">Replace</button>
-                        <button type="button">Pinout</button>
+                        <button type="button" data-cell-insert="cid_4">Insert</button>
+                        <button type="button">More details</button>
                     </div>
                 </div>
             </div>                          
@@ -114,16 +111,20 @@
             <div class="title">Custom Cable Editor</div>
             <button type="button" class="center_btn">Show quick preset cable configurations</button>
             <div class="cable_full">
-                <div class="input_output connectors_output_segment">
-                    <span class="connector_bubble connector_bubble_active" data-bubble="output_a"></span>
-                    <span class="connector_bubble hidden" data-bubble="output_b"></span>
+                <div class="input_output connectors_output_segment" data-bubble-container="output_b">
+                    <span class="connector_bubble connector_bubble_active right_io_hidden" data-bubble="output_a"></span>
+                    <span class="connector_bubble" data-bubble="output_b"></span>
                 </div>
                 <div class="center">
 
                 </div>
-                <div class="input_output connectors_input_segment">
-                    <span class="connector_bubble" data-bubble="input_a"></span>
-                    <span class="connector_bubble hidden" data-bubble="input_b"></span>
+                <div class="input_output connectors_input_segment" data-bubble-container="input_b">
+                    <span class="connector_bubble right_io_hidden" data-bubble="input_a">
+                        <div class="bubble_text">Text text</div>
+                        <img class="bubble_img" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-bubble-image="input_b">
+                        <div class="bubble_details">Details</Details></div>
+                    </span>
+                    <span class="connector_bubble" data-bubble="input_b"></span>
                 </div>
                 <div class="connector_count_container count_output">
                     <div class="connector_count_button" data-count_connector="output_b">
