--- a/FrontEndtesting/index.html
+++ b/FrontEndtesting/index.html
@@ -121,7 +121,7 @@
                 <div class="input_output connectors_input_segment" data-bubble-container="input_b">
                     <span class="connector_bubble right_io_hidden" data-bubble="input_a">
                         <div class="bubble_text">Text text</div>
-                        <img class="bubble_img" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-bubble-image="input_b">
+                        <img class="bubble_img" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-bubble-image="input_a">
                         <div class="bubble_details">Details</Details></div>
                     </span>
                     <span class="connector_bubble" data-bubble="input_b"></span>
