--- a/FrontEndtesting/index.html
+++ b/FrontEndtesting/index.html
@@ -45,11 +45,11 @@
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/TRS-6.35mm-3_Pole-male-side_view.svg" alt="" data-cell-image="cid_1">
                         <div class="cell_text_type_1">
-                            <p>Category: Audio</p>
-                            <p>Name: TRS</p>
-                            <p>Size: 6.35mm</p>
-                            <p>Pin/Pole: 3</p>
-                            <p>Gender: Male</p>
+                            <p data-cell-category="cid_1" data-cell-id="cid_1">Category: Audio</p>
+                            <p data-cell-name="TRS" data-cell-id="cid_1">Name: TRS</p>
+                            <p data-cell_size="6.35mm" data-cell-id="cid_1">Size: 6.35mm</p>
+                            <p data-cell-pins="cid_1" data-cell-id="cid_1">Pin/Pole: 3</p>
+                            <p data-cell-gender="male" data-cell-id="cid_1">Gender: Male</p>
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
@@ -111,20 +111,32 @@
             <div class="title">Custom Cable Editor</div>
             <button type="button" class="center_btn">Show quick preset cable configurations</button>
             <div class="cable_full">
-                <div class="input_output connectors_output_segment" data-bubble-container="output_b">
-                    <span class="connector_bubble connector_bubble_active right_io_hidden" data-bubble="output_a"></span>
-                    <span class="connector_bubble" data-bubble="output_b"></span>
+                <div class="input_output connectors_output_segment" data-bubble-segment="output">
+                    <span class="connector_bubble connector_bubble_active right_io_hidden" data-bubble="output_a">
+                        <div class="bubble_text" data-bubble_text="output_a"></div>
+                        <img class="bubble_img" src="" alt="" data-bubble-image="output_a">
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_a"></div>
+                    </span>
+                    <span class="connector_bubble" data-bubble="output_b">
+                        <div class="bubble_text" data-bubble_text="output_b"></div>
+                        <img class="bubble_img" src="" alt="" data-bubble-image="output_b">
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_b"></div>
+                    </span>
                 </div>
                 <div class="center">
 
                 </div>
-                <div class="input_output connectors_input_segment" data-bubble-container="input_b">
+                <div class="input_output connectors_input_segment" data-bubble-segment="input">
                     <span class="connector_bubble right_io_hidden" data-bubble="input_a">
-                        <div class="bubble_text">Text text</div>
+                        <div class="bubble_text" data-bubble="input_a">Text text</div>
                         <img class="bubble_img" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-bubble-image="input_a">
-                        <div class="bubble_details">Details</Details></div>
+                        <div class="bubble_details" data-bubble-connectorid="" data-bubble-detail="input_a">Details</Details></div>
                     </span>
-                    <span class="connector_bubble" data-bubble="input_b"></span>
+                    <span class="connector_bubble" data-bubble="input_b">
+                        <div class="bubble_text" data-bubble_text="input_b"></div>
+                        <img class="bubble_img" src="" alt="" data-bubble-image="input_b">
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="input_b"></div>
+                    </span>
                 </div>
                 <div class="connector_count_container count_output">
                     <div class="connector_count_button" data-count_connector="output_b">
