--- a/FrontEndtesting/index.html
+++ b/FrontEndtesting/index.html
@@ -45,11 +45,11 @@
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/TRS-6.35mm-3_Pole-male-side_view.svg" alt="" data-cell-image="cid_1">
                         <div class="cell_text_type_1">
-                            <p data-cell-category="cid_1" data-cell-id="cid_1">Category: Audio</p>
-                            <p data-cell-name="TRS" data-cell-id="cid_1">Name: TRS</p>
-                            <p data-cell_size="6.35mm" data-cell-id="cid_1">Size: 6.35mm</p>
-                            <p data-cell-pins="cid_1" data-cell-id="cid_1">Pin/Pole: 3</p>
-                            <p data-cell-gender="male" data-cell-id="cid_1">Gender: Male</p>
+                            <p data-cell-category="cid_1" value="Audio">Category: Audio</p>
+                            <p data-cell-name="cid_1" value="TRS">Name: TRS</p>
+                            <p data-cell-size="cid_1" value="6.35mm">Size: 6.35mm</p>
+                            <p data-cell-pins="cid_1" value="3">Pin/Pole: 3</p>
+                            <p data-cell-gender="cid_1" value="Male">Gender: Male</p>
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
@@ -61,11 +61,11 @@
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/TRS-2.5mm-3_pole-male-side_view.svg" alt="" data-cell-image="cid_2">
                         <div class="cell_text_type_1">
-                            <p>Category: Audio</p>
-                            <p>Name: TRS</p>
-                            <p>Size: 2.5mm</p>
-                            <p>Pin/Pole: 3</p>
-                            <p>Gender: Male</p>
+                            <p data-cell-category="cid_2" value="Audio">Category: Audio</p>
+                            <p data-cell-name="cid_2" value="TRS">Name: TRS</p>
+                            <p data-cell-size="cid_2" value="2.5mm">Size: 2.5mm</p>
+                            <p data-cell-pins="cid_2" value="3">Pin/Pole: 3</p>
+                            <p data-cell-gender="cid_2" value="Male">Gender: Male</p>
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
@@ -77,11 +77,11 @@
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/TRRRS-4.4mm_4_pole-male_side_view.svg" alt="" data-cell-image="cid_3">
                         <div class="cell_text_type_1">
-                            <p>Category: Audio</p>
-                            <p>Name: TRRRS</p>
-                            <p>Size: 4.4mm</p>
-                            <p>Pin/Pole: 5</p>
-                            <p>Gender: Male</p>
+                            <p data-cell-category="cid_3" value="Audio">Category: Audio</p>
+                            <p data-cell-name="cid_3" value="TRRRS">Name: TRRRS</p>
+                            <p data-cell-size="cid_3" value="4.4mm">Size: 4.4mm</p>
+                            <p data-cell-pins="cid_3" value="5">Pin/Pole: 5</p>
+                            <p data-cell-gender="cid_3" value="Male">Gender: Male</p>
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
@@ -93,11 +93,11 @@
                     <div class="connector_cell_type_1">
                         <img draggable="false" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-cell-image="cid_4">
                         <div class="cell_text_type_1">
-                            <p>Category: Audio</p>
-                            <p>Name: XLR</p>
-                            <p>Size: Standard</p>
-                            <p>Pin/Pole: 4</p>
-                            <p>Gender: Female</p>
+                            <p data-cell-category="cid_4" value="Audio">Category: Audio</p>
+                            <p data-cell-name="cid_4" value="XLR">Name: XLR</p>
+                            <p data-cell-size="cid_4" value="Standard">Size: Standard</p>
+                            <p data-cell-pins="cid_4" value="4">Pin/Pole: 4</p>
+                            <p data-cell-gender="cid_4" value="Female">Gender: Female</p>
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
@@ -112,32 +112,50 @@
             <button type="button" class="center_btn">Show quick preset cable configurations</button>
             <div class="cable_full">
                 <div class="input_output connectors_output_segment" data-bubble-segment="output">
-                    <span class="connector_bubble connector_bubble_active right_io_hidden" data-bubble="output_a">
-                        <div class="bubble_text" data-bubble_text="output_a"></div>
-                        <img class="bubble_img" src="" alt="" data-bubble-image="output_a">
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_a"></div>
-                    </span>
-                    <span class="connector_bubble" data-bubble="output_b">
-                        <div class="bubble_text" data-bubble_text="output_b"></div>
-                        <img class="bubble_img" src="" alt="" data-bubble-image="output_b">
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_b"></div>
-                    </span>
+                    <div class="main_bubble_container" data-bubble-container="output_a">
+                        <div class="bubble_text hidden" data-bubble_text="output_a"></div>
+                        <span class="connector_bubble connector_bubble_active" data-bubble="output_a">
+                            <p class="bubble_id_text">Output A</p>
+                            <img class="bubble_img" src="" alt="" data-bubble-image="output_a">
+                        </span>
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_a">Details</div>
+                    </div>
+
+                    <div class="main_bubble_container io_hidden" data-bubble-container="output_b">
+                        <div class="bubble_text hidden" data-bubble_text="output_b"></div>
+                        <span class="connector_bubble" data-bubble="output_b">
+                            <p class="bubble_id_text">Output B</p>
+                            <img class="bubble_img" src="" alt="" data-bubble-image="output_b">
+                        </span>
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="output_b">Details</div>
+                    </div>
+                    
                 </div>
+                
                 <div class="center">
 
                 </div>
+
                 <div class="input_output connectors_input_segment" data-bubble-segment="input">
-                    <span class="connector_bubble right_io_hidden" data-bubble="input_a">
-                        <div class="bubble_text" data-bubble="input_a">Text text</div>
-                        <img class="bubble_img" src="img/XLR-standard-4_pin-female-side_view.svg" alt="" data-bubble-image="input_a">
-                        <div class="bubble_details" data-bubble-connectorid="" data-bubble-detail="input_a">Details</Details></div>
-                    </span>
-                    <span class="connector_bubble" data-bubble="input_b">
-                        <div class="bubble_text" data-bubble_text="input_b"></div>
-                        <img class="bubble_img" src="" alt="" data-bubble-image="input_b">
-                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="input_b"></div>
-                    </span>
+                    <div class="main_bubble_container" data-bubble-container="input_a">
+                        <div class="bubble_text hidden" data-bubble-text="input_a"></div>
+                        <span class="connector_bubble" data-bubble="input_a">
+                            <p class="bubble_id_text">Input A</p>
+                            <img class="bubble_img" src="" alt="" data-bubble-image="input_a">
+                        </span>
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="input_a">Details</Details></div>
+                    </div>
+
+                    <div class="main_bubble_container io_hidden" data-bubble-container="input_b">
+                        <div class="bubble_text hidden" data-bubble-text="input_b"></div>
+                        <span class="connector_bubble" data-bubble="input_b">
+                            <p class="bubble_id_text">Input B</p>
+                            <img class="bubble_img" src="" alt="" data-bubble-image="input_b">
+                        </span>
+                        <div class="bubble_details hidden" data-bubble-connectorid="" data-bubble-detail="input_b">Details</div>
+                    </div>
                 </div>
+
                 <div class="connector_count_container count_output">
                     <div class="connector_count_button" data-count_connector="output_b">
                         <div data-connector_count-text="output_b">Add</div>
