--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -19,22 +19,22 @@
             <div class="connector_selector_container">
                 <h1>Select what connector to edit</h1>
                 <div class="segment_connectors_container">
-                    <label class="connector_selector_radio_container">
+                    <label class="connector_selector_radio_container" data-selector-container="output_a">
                         <input type="radio" name="connector_selector_radio_group" checked="checked" data-selector="output_a"></input>
                         <span class="connector_selector_radio">Output A</span>
                     </label>
                     
-                    <label class="connector_selector_radio_container hidden" data-selector-container="output_b">
+                    <label class="connector_selector_radio_container connector_selector_radio_container_hidden" data-selector-container="output_b">
                         <input type="radio" name="connector_selector_radio_group" data-selector="output_b"></input>
                         <span class="connector_selector_radio">Output B</span>
                     </label>
                     
-                    <label class="connector_selector_radio_container">
+                    <label class="connector_selector_radio_container" data-selector-container="input_a">
                         <input type="radio" name="connector_selector_radio_group" data-selector="input_a"></input>
                         <span class="connector_selector_radio">Input A</span>
                     </label>
 
-                    <label class="connector_selector_radio_container hidden" data-selector-container="input_b">
+                    <label class="connector_selector_radio_container connector_selector_radio_container_hidden" data-selector-container="input_b">
                         <input type="radio" name="connector_selector_radio_group" data-selector="input_b"></input>
                         <span class="connector_selector_radio">Input B</span>
                     </label>
