--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -53,8 +53,7 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button" data-cell-insert="cid_1">Insert</button>
-                        <button type="button">More details</button>
+                        <button type="button" data-cell-insert="cid_1">Add connector to cable</button>
                     </div>
                 </div>
                 <div class="connector_cell_container">
@@ -69,8 +68,7 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button" data-cell-insert="cid_2">Insert</button>
-                        <button type="button">More details</button>
+                        <button type="button" data-cell-insert="cid_2">Add connector to cable</button>
                     </div>
                 </div>  
                 <div class="connector_cell_container">
@@ -85,8 +83,7 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button" data-cell-insert="cid_3">Insert</button>
-                        <button type="button">More details</button>
+                        <button type="button" data-cell-insert="cid_3">Add connector to cable</button>
                     </div>
                 </div>
                 <div class="connector_cell_container">
@@ -101,8 +98,7 @@
                         </div>
                     </div>
                     <div class="connector_cell_more_options">
-                        <button type="button" data-cell-insert="cid_4">Insert</button>
-                        <button type="button">More details</button>
+                        <button type="button" data-cell-insert="cid_4">Add connector to cable</button>
                     </div>
                 </div>
             </div>                          
