--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -105,7 +105,6 @@
         </div>
         <div class="cable_editor_container">
             <div class="title">Custom Cable Editor</div>
-            <button type="button" class="center_btn">Show quick preset cable configurations</button>
             <div class="cable_full">
                 <div class="input_output connectors_output_segment" data-bubble-segment="output">
                     <div class="main_bubble_container" data-bubble-container="output_a">
@@ -129,7 +128,72 @@
                 </div>
                 
                 <div class="center">
-
+                    <svg class="cable_SVG" width="30" height="497" viewBox="0 0 30 497" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="Group 1">
+                        <path id="input_a" d="M28.107 466H13.5987H9.60381H2.34964H1.99999L1.99999 496.236H28.4567L28.4567 466H28.107Z" fill="black"/>
+                        <path id="output_a" d="M1.99999 30.2362L1.99999 0L28.4567 0L28.4567 30.2362H28.107L9.60381 30.2362H2.34964H1.99999Z" fill="black"/>
+                        <g id="wire_2">
+                        <path id="Vector" d="M2.34961 466.42L2.34961 457.333L9.60378 466.42H2.34961Z" fill="#0057FF"/>
+                        <path id="Vector_2" d="M28.107 393.722L28.107 375.548L18.8554 387.137L11.6012 396.225L18.8554 405.312L28.107 393.722Z" fill="#0057FF"/>
+                        <path id="Vector_3" d="M28.107 175.631L28.107 157.456L18.8554 169.046L11.6012 178.133L18.8554 187.22L28.107 175.631Z" fill="#0057FF"/>
+                        <path id="Vector_4" d="M28.107 230.154L18.8554 241.743L11.6012 232.656L18.8554 223.569L28.107 211.979L28.107 230.154Z" fill="#0057FF"/>
+                        <path id="Vector_5" d="M2.34964 420.984L2.34964 402.81L11.6012 414.399L18.8554 423.486L11.6012 432.573L2.34964 420.984Z" fill="#0057FF"/>
+                        <path id="Vector_6" d="M28.107 448.245L28.107 430.071L18.8554 441.66L11.6012 450.748L18.8554 459.835L28.107 448.245Z" fill="#0057FF"/>
+                        <path id="Vector_7" d="M2.34964 202.892L2.34964 184.718L11.6012 196.307L18.8554 205.394L11.6012 214.482L2.34964 202.892Z" fill="#0057FF"/>
+                        <path id="Vector_8" d="M28.107 339.2L28.107 321.025L18.8554 332.615L11.6012 341.702L18.8554 350.789L28.107 339.2Z" fill="#0057FF"/>
+                        <path id="Vector_9" d="M2.34964 257.415L11.6012 269.004L18.8554 259.917L11.6012 250.83L2.34964 239.241L2.34964 257.415Z" fill="#0057FF"/>
+                        <path id="Vector_10" d="M28.107 66.5849L18.8554 78.1742L11.6012 69.087L18.8554 59.9998L28.107 48.4106L28.107 66.5849Z" fill="#0057FF"/>
+                        <path id="Vector_11" d="M2.34964 148.369L11.6012 159.959L18.8554 150.871L11.6012 141.784L2.34964 130.195L2.34964 148.369Z" fill="#0057FF"/>
+                        <path id="Vector_12" d="M2.34964 366.461L11.6012 378.05L18.8554 368.963L11.6012 359.876L2.34964 348.287L2.34964 366.461Z" fill="#0057FF"/>
+                        <path id="Vector_13" d="M2.34964 311.938L11.6012 323.527L18.8554 314.44L11.6012 305.353L2.34964 293.764L2.34964 311.938Z" fill="#0057FF"/>
+                        <path id="Vector_14" d="M18.8554 96.3484L11.6012 87.2613L2.34964 75.672L2.34964 93.8463L11.6012 105.436L18.8554 96.3484Z" fill="#0057FF"/>
+                        <path id="Vector_15" d="M28.107 102.933L28.107 121.108L18.8554 132.697L11.6012 123.61L18.8554 114.523L28.107 102.933Z" fill="#0057FF"/>
+                        <path id="Vector_16" d="M2.34964 39.3234V30.2362L9.6038 30.2362L18.8554 41.8255L11.6012 50.9127L2.34964 39.3234Z" fill="#0057FF"/>
+                        <path id="Vector_17" d="M28.107 284.677L28.107 266.502L18.8554 278.092L11.6012 287.179L18.8554 296.266L28.107 284.677Z" fill="#0057FF"/>
+                        </g>
+                        <g id="wire_3">
+                        <path id="Vector_18" d="M28.107 248.328L28.107 230.154L18.8554 241.743L11.6012 250.83L18.8554 259.917L28.107 248.328Z" fill="black"/>
+                        <path id="Vector_19" d="M18.8554 132.697L28.107 121.108L28.107 139.282L18.8554 150.871L11.6012 141.784L18.8554 132.697Z" fill="black"/>
+                        <path id="Vector_20" d="M28.107 193.805L18.8554 205.394L11.6012 196.307L18.8554 187.22L28.107 175.631L28.107 193.805Z" fill="black"/>
+                        <path id="Vector_21" d="M2.34964 384.635L2.34964 366.461L11.6012 378.05L18.8554 387.137L11.6012 396.225L2.34964 384.635Z" fill="black"/>
+                        <path id="Vector_22" d="M2.34964 221.067L11.6012 232.656L18.8554 223.569L11.6012 214.482L2.34964 202.892L2.34964 221.067Z" fill="black"/>
+                        <path id="Vector_23" d="M2.34964 439.158L11.6012 450.748L18.8554 441.66L11.6012 432.573L2.34964 420.984L2.34964 439.158Z" fill="black"/>
+                        <path id="Vector_24" d="M28.107 357.374L28.107 339.2L18.8554 350.789L11.6012 359.876L18.8554 368.963L28.107 357.374Z" fill="black"/>
+                        <path id="Vector_25" d="M28.107 411.897L18.8554 423.486L11.6012 414.399L18.8554 405.312L28.107 393.722L28.107 411.897Z" fill="black"/>
+                        <path id="Vector_26" d="M28.107 466.42H13.5987L18.8554 459.835L28.107 448.245L28.107 466.42Z" fill="black"/>
+                        <path id="Vector_27" d="M2.34964 57.4977L2.34964 39.3234L11.6012 50.9127L18.8554 59.9999L11.6012 69.087L2.34964 57.4977Z" fill="black"/>
+                        <path id="Vector_28" d="M11.6012 105.436L2.34964 93.8464L2.34964 112.021L11.6012 123.61L18.8554 114.523L11.6012 105.436Z" fill="black"/>
+                        <path id="Vector_29" d="M2.34964 275.589L11.6012 287.179L18.8554 278.092L11.6012 269.004L2.34964 257.415L2.34964 275.589Z" fill="black"/>
+                        <path id="Vector_30" d="M2.34964 166.544L2.34964 148.369L11.6012 159.959L18.8554 169.046L11.6012 178.133L2.34964 166.544Z" fill="black"/>
+                        <path id="Vector_31" d="M28.107 30.2362L9.60379 30.2362L18.8554 41.8255L28.107 30.2362Z" fill="black"/>
+                        <path id="Vector_32" d="M11.6012 87.2613L18.8554 96.3484L28.107 84.7592L28.107 66.5848L18.8554 78.1741L11.6012 87.2613Z" fill="black"/>
+                        <path id="Vector_33" d="M28.107 302.851L18.8554 314.44L11.6012 305.353L18.8554 296.266L28.107 284.677L28.107 302.851Z" fill="black"/>
+                        <path id="Vector_34" d="M2.34964 330.112L11.6012 341.702L18.8554 332.615L11.6012 323.527L2.34964 311.938L2.34964 330.112Z" fill="black"/>
+                        </g>
+                        <g id="wire_1">
+                        <path id="Vector_35" d="M2.34964 402.81L2.34964 384.635L11.6012 396.225L18.8554 405.312L11.6012 414.399L2.34964 402.81Z" fill="#FF0000"/>
+                        <path id="Vector_36" d="M2.34964 184.718L11.6012 196.307L18.8554 187.22L11.6012 178.133L2.34964 166.544L2.34964 184.718Z" fill="#FF0000"/>
+                        <path id="Vector_37" d="M28.107 157.456L28.107 139.282L18.8554 150.871L11.6012 159.959L18.8554 169.046L28.107 157.456Z" fill="#FF0000"/>
+                        <path id="Vector_38" d="M28.107 375.548L18.8554 387.137L11.6012 378.05L18.8554 368.963L28.107 357.374L28.107 375.548Z" fill="#FF0000"/>
+                        <path id="Vector_39" d="M28.107 430.071L28.107 411.897L18.8554 423.486L11.6012 432.573L18.8554 441.66L28.107 430.071Z" fill="#FF0000"/>
+                        <path id="Vector_40" d="M2.34964 239.241L2.34964 221.067L11.6012 232.656L18.8554 241.743L11.6012 250.83L2.34964 239.241Z" fill="#FF0000"/>
+                        <path id="Vector_41" d="M28.107 211.979L18.8554 223.569L11.6012 214.482L18.8554 205.394L28.107 193.805L28.107 211.979Z" fill="#FF0000"/>
+                        <path id="Vector_42" d="M2.34964 112.021L2.34964 130.195L11.6012 141.784L18.8554 132.697L11.6012 123.61L2.34964 112.021Z" fill="#FF0000"/>
+                        <path id="Vector_43" d="M2.34964 457.333L2.34964 439.158L11.6012 450.748L18.8554 459.835L13.5987 466.42H9.6038L2.34964 457.333Z" fill="#FF0000"/>
+                        <path id="Vector_44" d="M28.107 321.025L18.8554 332.615L11.6012 323.527L18.8554 314.44L28.107 302.851L28.107 321.025Z" fill="#FF0000"/>
+                        <path id="Vector_45" d="M28.107 266.502L28.107 248.328L18.8554 259.917L11.6012 269.004L18.8554 278.092L28.107 266.502Z" fill="#FF0000"/>
+                        <path id="Vector_46" d="M2.34964 293.764L2.34964 275.589L11.6012 287.179L18.8554 296.266L11.6012 305.353L2.34964 293.764Z" fill="#FF0000"/>
+                        <path id="Vector_47" d="M28.107 84.7592L28.107 102.933L18.8554 114.523L11.6012 105.436L18.8554 96.3485L28.107 84.7592Z" fill="#FF0000"/>
+                        <path id="Vector_48" d="M28.107 48.4105L18.8554 59.9998L11.6012 50.9127L18.8554 41.8255L28.107 30.2362L28.107 48.4105Z" fill="#FF0000"/>
+                        <path id="Vector_49" d="M2.34964 348.287L2.34964 330.112L11.6012 341.702L18.8554 350.789L11.6012 359.876L2.34964 348.287Z" fill="#FF0000"/>
+                        <path id="Vector_50" d="M2.34964 75.672L11.6012 87.2613L18.8554 78.1741L11.6012 69.087L2.34964 57.4977L2.34964 75.672Z" fill="#FF0000"/>
+                        </g>
+                        <rect id="Rectangle 1" y="226" width="30" height="45" fill="#D9D9D9"/>
+                        <rect id="Rectangle 3" y="346" width="30" height="45" fill="#D9D9D9"/>
+                        <rect id="Rectangle 2" y="106" width="30" height="45" fill="#D9D9D9"/>
+                        </g>
+                        </svg>
+                        
                 </div>
 
                 <div class="input_output connectors_input_segment" data-bubble-segment="input">
